--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,9 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-gh
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: Handmade 
+title: Handmade. 
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: a collection of work by Alex Grabowski
+tagline: A collection of work by Alex Grabowski
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: "A collection of my handmade work, including crochted, ceramic, and woven pieces"
