--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: Handmade.
 tagline: A collection of work by Alex Grabowski
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "A collection of my handmade work, including crochted, ceramic, and woven pieces"
+description: "A collection of my handmade work, including crocheted, ceramic, and woven pieces"
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: Alex Grabowski
 
